[tool.poetry]
name = "hyperparameter-tuner"
version = "0.1.0"
description = ""
authors = ["C4 Patino <c4patino@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
optuna = "^4.0.0"
neptune = "^1.12.0"
neptune-optuna = "^1.3.0"
numpy = "^1.26.4"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
