[project]
name = "slurm-tuner"
version = "0.1.0"
description = ""
authors = [
    { name = "C4 Patino", email = "c4patino@gmail.com" }
]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"

requires-python = "^3.9"
dependencies = [
    "optuna (>=4.2.1,<5.0.0)",
    "neptune (>=1.13.0,<2.0.0)",
    "neptune-optuna (>=1.4.1,<2.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
